--- a/core/res/res/values/pixys_config.xml
+++ b/core/res/res/values/pixys_config.xml
@@ -103,4 +103,12 @@
         <item>com.google.android.youtube</item>
         <item>org.lineageos.aperture</item>
     </string-array>
+
+    <!-- Button backlight control. Possible values are:
+            0 - Not supported
+            1 - Supported, but only on/off mode
+            2 - Supported with variable brightness control
+    -->
+    <integer name="config_deviceSupportsButtonBrightnessControl">0</integer>
+    <dimen name="config_buttonBrightnessSettingDefaultFloat">1.0</dimen>
 </resources>
