--- a/packages/SystemUI/res/values/pixys_strings.xml
+++ b/packages/SystemUI/res/values/pixys_strings.xml
@@ -40,4 +40,11 @@
     <string name="quick_settings_powershare_off_low_battery_label">Battery Share off\nBattery too low</string>
     <string name="quick_settings_powershare_enabled_label">Battery Share is enabled</string>
 
+   <!-- Power Menu -->
+    <string name="global_action_reboot">Restart</string>
+    <string name="global_action_reboot_more">Restart\u2026</string>
+    <string name="global_action_reboot_sub">System</string>
+    <string name="global_action_reboot_recovery">Recovery</string>
+    <string name="global_action_reboot_bootloader">Bootloader</string>
+    <string name="global_action_settings">Settings</string>
 </resources>
