--- a/core/res/res/values/pixys_config.xml
+++ b/core/res/res/values/pixys_config.xml
@@ -32,4 +32,11 @@
     <!-- Alert slider proc nodes paths -->
     <string name="alert_slider_state_path"></string>
     <string name="alert_slider_uevent_match_path"></string>
+
+    <!-- Name of a font family to use as light font. For theming purpose. -->
+    <string name="config_lightFontFamily" translatable="false">sans-serif-light</string>
+
+    <!-- Name of a font family to use as regular font. For theming purpose. -->
+    <string name="config_regularFontFamily" translatable="false">sans-serif-regular</string>
+
 </resources>
