SystemUI: Add powershare QS tile
Author: Linux4 <tim@linux4.de>
Date:   Mon Apr 20 17:57:43 2020 +0200

    base: SystemUI: add qs powershare tile

    Change-Id: Ibcf5cc3e766d971d9dca9242bf2770093d4d3099

Author: Linux4 <tim@linux4.de>
Date:   Sat May 2 12:54:49 2020 +0200

    base: SystemUI: fix NPE in PowerShareTile

    Change-Id: If69846f3e3d4f3a12c0f78f47b5adc1008888de1

Author: LuK1337 <priv.luk@gmail.com>
Date:   Tue Jul 7 13:27:12 2020 +0200

    SystemUI: Call setOnlyAlertOnce(true) for PowerShare notification

    * Otherwise we end up getting notification sound
      every 20 seconds when using it...

    Change-Id: Ia56b01f332860b64f0d2c532884e6bcaa2acfb17

[aswin7469]
- Adapted for 13 QPR3

Change-Id: Ia09a674745adb433f3aaeebfeb79899906350793
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/packages/SystemUI/res/values/pixys_strings.xml
+++ b/packages/SystemUI/res/values/pixys_strings.xml
@@ -33,4 +33,10 @@
     <string name="qs_data_switch_text_2">SIM 2</string>
     <string name="qs_data_switch_changed_1">Switched data card to SIM 1.</string>
     <string name="qs_data_switch_changed_2">Switched data card to SIM 2.</string>
+
+    <!-- PowerShare QS tile -->
+    <string name="quick_settings_powershare_label">Wireless PowerShare</string>
+    <string name="quick_settings_powershare_off_powersave_label">Wireless PowerShare off\nBattery saver</string>
+    <string name="quick_settings_powershare_off_low_battery_label">Wireless PowerShare off\nBattery too low</string>
+    <string name="quick_settings_powershare_enabled_label">Wireless PowerShare is enabled</string>
 </resources>
