Initial import of Face Unlock for S
Change-Id: If784cd1283dade71e72995e828586e3be2b4abb0
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/core/res/res/values/pixys_config.xml
+++ b/core/res/res/values/pixys_config.xml
@@ -208,4 +208,7 @@
 
     <!-- Whether to use Richtap vibration -->
     <bool name="config_usesRichtapVibration">false</bool>
+
+    <!-- Enable face auth only when swiping security view -->
+    <bool name="config_faceAuthOnlyOnSecurityView">false</bool>
 </resources>
