--- a/core/res/res/values/pixys_symbols.xml
+++ b/core/res/res/values/pixys_symbols.xml
@@ -108,4 +108,7 @@
 
     <!-- Whether to use Richtap vibration -->
     <java-symbol type="bool" name="config_usesRichtapVibration" />
+
+    <!-- Enable face auth only when swiping security view -->
+    <java-symbol type="bool" name="config_faceAuthOnlyOnSecurityView" />
 </resources>
