--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -74,7 +74,7 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_default" translatable="false">
-        internet,bt,flashlight,dnd,alarm,airplane,controls,wallet,rotation,battery,cast,screenrecord,mictoggle,cameratoggle
+        wifi,cell,bt,flashlight,dnd,alarm,airplane,rotation,battery,cast,screenrecord,mictoggle,cameratoggle,location,hotspot
     </string>
 
     <!-- The minimum number of tiles to display in QuickSettings -->
@@ -82,7 +82,7 @@
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
     <string name="quick_settings_tiles_stock" translatable="false">
-        internet,wifi,cell,bt,flashlight,dnd,alarm,airplane,controls,wallet,rotation,battery,cast,screenrecord,mictoggle,cameratoggle,location,hotspot,inversion,saver,dark,work,night,reverse,reduce_brightness,nfc,caffeine,heads_up,aod
+        wifi,cell,bt,flashlight,dnd,alarm,airplane,rotation,battery,cast,screenrecord,mictoggle,cameratoggle,location,hotspot,inversion,saver,dark,work,night,reverse,reduce_brightness,nfc,caffeine,heads_up,aod,internet,controls,wallet
     </string>
 
     <!-- The tiles to display in QuickSettings -->
