NetworkTraffic: General improvements
- Remove unused resource
- Fix indent
- Use fixed width to avoid moving around
- Use INVISIBLE rather than GONE for auto hiding to reserve space
- Add missing makeVisible() for uplink
- Cleanup and optimize

Change-Id: Ic3b6021feeba6c2ee7b2a5f26fda7d7c4eea67cf
Signed-off-by: LibXZR <i@xzr.moe>
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/packages/SystemUI/res/values/pixys_dimens.xml
+++ b/packages/SystemUI/res/values/pixys_dimens.xml
@@ -18,4 +18,7 @@
     <color name="edge_light_green">#ff3aa853</color>
     <color name="edge_light_red">#ffea4234</color>
     <color name="edge_light_yellow">#fffbbc06</color>
+
+    <!-- Network traffic -->
+    <dimen name="network_traffic_width">25sp</dimen>
 </resources>
