--- a/packages/SystemUI/res/values/pixys_dimens.xml
+++ b/packages/SystemUI/res/values/pixys_dimens.xml
@@ -25,4 +25,7 @@
     <!-- Additional gesture navbar lengths -->
     <dimen name="navigation_home_handle_width_medium">110dp</dimen>
     <dimen name="navigation_home_handle_width_long">140dp</dimen>
+
+    <!-- Bluetooth dialog -->
+    <dimen name="bluetooth_dialog_active_device_bottom_margin">4dp</dimen>
 </resources>
