BoostFramework: Guard it with overlay
Change-Id: I5e22a590b0f1f0e9a678d45d06bb262021cf84bb
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/core/res/res/values/pixys_config.xml
+++ b/core/res/res/values/pixys_config.xml
@@ -58,4 +58,7 @@
         <item>org.pixelexperience.faceunlock</item>
     </string-array>
 
+    <!-- Boost Framework -->
+    <bool name="config_supportsBoostFramework">false</bool>
+
 </resources>
