base: Add minimal support for Richtap vibrations
This implementation of Richtap is highly inspired by Nothings but stripped down to its essentials to match our needs.

If your device supports Richtap vibrations set "config_usesRichtapVibration" to true and enjoy!

Co-Authored-By: Chris Crump <chriscrawford893@gmail.com>
Co-Authored-By: Jake Weinstein <jake@aospa.co>
Co-Authored-By: UP5468-GE-ES44AC <2509942930@qq.com>
Co-Authored-By: Anay Wadhera <anay@aospa.co>

Change-Id: I645f6d7a11b662a2aa9b75086a3a1f7842130cb8
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/core/res/res/values/pixys_symbols.xml
+++ b/core/res/res/values/pixys_symbols.xml
@@ -106,4 +106,6 @@
     <java-symbol type="string" name="poweroff_alarm_body" />
     <java-symbol type="drawable" name="ic_alarm_on" />
 
+    <!-- Whether to use Richtap vibration -->
+    <java-symbol type="bool" name="config_usesRichtapVibration" />
 </resources>
