--- a/core/res/res/values/pixys_config.xml
+++ b/core/res/res/values/pixys_config.xml
@@ -206,4 +206,6 @@
          (without "Focus" state) instead of Dual-stage. -->
     <bool name="config_singleStageCameraKey">false</bool>
 
+    <!-- Whether to use Richtap vibration -->
+    <bool name="config_usesRichtapVibration">false</bool>
 </resources>
