base: PowerOffAlarmService: Add a notification
To help the user know if their app is supported by this service

Change-Id: Ie489fe593b8eeb77c88ebf8b5158261e5105ec63
[ghostrider-reborn: use PendingIntent.FLAG_IMMUTABLE to fix crash]
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/core/res/res/values/pixys_strings.xml
+++ b/core/res/res/values/pixys_strings.xml
@@ -46,4 +46,9 @@
     <!-- SystemUI Restart -->
     <string name="systemui_restart_title">SystemUI restart required</string>
     <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
+
+    <!-- PowerOffAlarmService -->
+    <string name="notification_channel_poweroff_alarm">Power off alarm</string>
+    <string name="poweroff_alarm_title">Power off alarm set</string>
+    <string name="poweroff_alarm_body">An alarm was detected and the device will power on 2 minutes before it\'s due</string>
 </resources>
